objects/SPD_Cash_Contract__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outbound_Type__c</fullName>
        <label>Outbound Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sObject_Name__c</fullName>
        <label>sObject Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>SPD Cash Contract</label>
</CustomObject>